added title page information and recompiled.

--- a/Latex_Thesis_Prop/ThesisProposal.tex
+++ b/Latex_Thesis_Prop/ThesisProposal.tex
@@ -84,9 +84,11 @@
 \setlength{\parskip}{2ex plus 0.5ex minus 0.2ex}
 
 % Please put \noindent before each paragraph of the abstract!
-\noindent \lipsum[1]
+\noindent
 
-\noindent \lipsum[2]
+\noindent 
+
+
 \end{abstract}
 \newpage
 
