--- a/Latex_Thesis_Prop/title.tex
+++ b/Latex_Thesis_Prop/title.tex
@@ -8,12 +8,12 @@
 \textsc{\LARGE Saarland  University}\\[0.4cm]
 \textsc{\Large Department of Computational Linguistics}\\[1.5cm]
 
-\textsc{\Large Seminar:} \textbf{\Large Title of the Seminar}\\[0.5cm]
+ \textbf{\Large Masters Thesis Proposal}\\[0.5cm]
 
 % Title
 \HRule \\[1.0cm]
 
-{ \huge \bfseries Title of the Term Paper}\\[0.4cm]
+{ \huge \bfseries A visual feedback CAPT tool for improving German vowel production}\\[0.4cm]
 
 \HRule \\[1.5cm]
 
@@ -21,22 +21,22 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-John \textsc{Smith}\\
-Matriculation: 1234456
+Patrick \textsc{Carroll}\\
+Matriculation: 2548790
 \end{flushleft}
 \end{minipage}
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisors:} \\
-Dr. Mark \textsc{Brown}\\
-Dr. Bernd \textsc{Marc}\\
+Dr. Bernd \textsc{M{\"o}bius}\\
+Dr. J{\"u}rgen \textsc{Trouvain}\\
 \end{flushright}
 \end{minipage}
 
 \vfill
 
 % Bottom of the page
-{\large Date of submission}
+{\large 31.05.2015}
 
 \end{center}
 \end{titlepage}
