Finished the 1st version of the Abstract

--- a/Latex_Thesis_Prop/ThesisProposal.tex
+++ b/Latex_Thesis_Prop/ThesisProposal.tex
@@ -84,18 +84,18 @@
 \setlength{\parskip}{2ex plus 0.5ex minus 0.2ex}
 
 % Please put \noindent before each paragraph of the abstract!
-\noindent
+\noindent Second language learners often struggle with correctly perceiving and producing vowels contained within the vowel inventory of their target language.  These errors are hypothesized to be caused by interference from the native language phonology of the learners which prevents them from correctly forming new vowel categories for one or more of the vowel in the target language \citep{flege1995second}. For learners of German, this is a particularly common phenomenon, due to the fact that the German vowel inventory is relatively large and many vowel categories are separated by very slight changes in spectral or durational information. \citep{patzold1997acoustic} This means that learners  with sparser L1 vowel systems must attempt to form many new vowel categories, often in a region of the vowel space where new vowels could easily be misperceived or assimilated to existing L1 categories \citep{}. In order to assist L2 German learners in the correct formation of new vowel categories, I propose a Computer Assisted Pronunciation Training (CAPT) tool to providing visual feedback describing the differences between German vowels. The CAPT tool will be based on a previous proof of concept system \citep{} which displays formant and duration information for model German utterances, as well as utterances produced by the learner.
 
-\noindent 
+\noindent  The continued develop of the CAPT tool will serve as the central project for the Masters Thesis.  Planned improvements to the system architecture include vowel recognition using forced alignment, and a system to customize vowel category targets based on the individual acoustic vowel space of each user. The user interface will also undergo improvements to be more clearly readable, and to include supplementary information about tongue position. The research fields contributing to the development of the tool will be divided into 3 broad categories: 1) Second language learning and pedagogy. 2) Acoustic  analysis of the vowel space. 3) Design and implementation of CAPT systems. An extensive literature search will be conducted in these three fields to provide a solid theoretical background to the development of features and interfaces for the tool. After development and testing of the CAPT system, an experiment to test it's effectiveness will be designed and carried out provided a sufficiently large group of subjects can be organized.  
 
 
 \end{abstract}
 \newpage
 
 % Table of contents
-\thispagestyle{empty}
-\tableofcontents
-\newpage
+%\thispagestyle{empty}
+%\tableofcontents
+%\newpage
 
 % Start of content
 \setcounter{page}{1}		% Seitenzähler auf 1 setzen %
