--- a/Latex_Thesis_Prop/section1.tex
+++ b/Latex_Thesis_Prop/section1.tex
@@ -1,6 +1,6 @@
 \section{Lorem Ipsum}
 
-\lipsum[3]
+  This perceptual deficit carries over into production, where it has been shown that L2 German speakers fail to correctly produce certain German vowel minimal pairs \citep{hirschfeld1994untersuchungen, Zimmerer}.  
 
 \subsection{Natbib citations}
 Within a text, you can say that \citet{lin2001} found out something. Or you can just state the thing, and then put the author in parentheses \citep[see][]{szpektor2004}.
