--- a/Latex_Thesis_Prop/references.bib
+++ b/Latex_Thesis_Prop/references.bib
@@ -42,3 +42,142 @@ Papers on Learning Directionality of Paraphrases
 	pages = {161--170},
 	address = {Prague, Czech Republic}
 }
+
+
+@misc{praat,
+	Author = {Boersma, Paul and Weenink, David},
+	Date-Added = {2014-02-19 15:38:41 +0000},
+	Date-Modified = {2014-02-19 15:44:02 +0000},
+	Howpublished = {Computer program (Version 5.3.64)},
+	Title = {Praat: doing phonetics by computer},
+	Url = {http://www.praat.org/},
+	Year = {2014}}
+
+@article{flege1995second,
+  title={Second language speech learning: Theory, findings, and problems},
+  author={Flege, James E},
+  journal={Speech Perception and Linguistic Experience: Theoretical and Methodological Issues in Cross-Language Speech Research},
+  pages={233--272},
+  publisher={Timonium, MD: York Press Inc},
+  Year={1995},
+  Note={Timonium, MD: York Press Inc},
+  }
+  
+@book{hirschfeld1994untersuchungen,
+  title={Untersuchungen zur phonetischen Verst{\"a}ndlichkeit Deutschlernender},
+  author={Hirschfeld, Ursula},
+  Year={1994},
+  publisher={Frankfurt am Main: Hector}}
+  
+@article{pallier1997limit,
+title={A limit on behavioral plasticity in speech perception},
+author={Pallier, Christophe and Bosch, Laura and Sebasti{\'a}n-Gall{\'e}s, N{\'u}ria},
+journal={Cognition},
+volume={64},
+number={3},
+pages={B9--B17},
+year={1997},
+publisher={Elsevier}
+}
+
+@article{flege1999native,
+  title={Native Italian speakers’ perception and production of English vowels},
+  author={Flege, James Emil and MacKay, Ian RA and Meador, Diane},
+  journal={The Journal of the Acoustical Society of America},
+  volume={106},
+  number={5},
+  pages={2973--2987},
+  year={1999},
+  publisher={Acoustical Society of America}
+}
+
+@article{weber2014treack,
+  title={Treack or trit: Adaptation to genuine and arbitrary foreign accents by monolingual and bilingual listeners},
+  author={Weber, Andrea and Di Betta, Anna Maria and McQueen, James M},
+  journal={Journal of Phonetics},
+  volume={46},
+  pages={34--51},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{escudero2009native,
+  title={Native, non-native and L2 perceptual cue weighting for Dutch vowels: The case of Dutch, German, and Spanish listeners},
+  author={Escudero, Paola and Benders, Titia and Lipski, Silvia C},
+  journal={Journal of Phonetics},
+  volume={37},
+  number={4},
+  pages={452--465},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{patzold1997acoustic,
+  title={Acoustic analysis of German vowels in the Kiel Corpus of Read Speech},
+  author={P{\"a}tzold, Matthias and Simpson, Adrian P},
+  journal={Work reports of the Department of Phonetics and Digital Language Processing of the University Kiel},
+  pages={215--247},
+  year={1997}
+}
+
+@article{neri2002pedagogy,
+  title={The pedagogy-technology interface in computer assisted pronunciation training},
+  author={Neri, Ambra and Cucchiarini, Catia and Strik, Helmer and Boves, Lou},
+  journal={Computer Assisted Language Learning},
+  volume={15},
+  number={5},
+  pages={441--467},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{thomson2011computer,
+  title={Computer assisted pronunciation training: Targeting second language vowel perception improves pronunciation},
+  author={Thomson, Ron I},
+  journal={Calico Journal},
+  volume={28},
+  number={3},
+  pages={744--765},
+  year={2011}
+}
+
+@article{hansen2006computer,
+  title={Computer assisted pronunciation training: The four'K's of feedback},
+  author={Hansen, Thomas K},
+  journal={Current Developments in Technology-Assisted Education},
+  pages={342--346},
+  year={2006},
+  publisher={Citeseer}
+}
+
+@inproceedings{neri2003automatic,
+  title={Automatic speech recognition for second language learning: How and why it actually works},
+  author={Neri, Ambra and Cucchiarini, Catia and Strik, H},
+  booktitle={Proc. Internation Congress of Phonetic Sciences},
+  pages={1157--1160},
+  year={2003}
+}
+
+@inproceedings{wong2011allophonic,
+  title={Allophonic variations in visual speech synthesis for corrective feedback in CAPT},
+  author={Wong, Ka-Ho and Lo, Wai-Kit and Meng, Helen},
+  booktitle={Acoustics, Speech and Signal Processing (ICASSP), 2011 IEEE International Conference on},
+  pages={5708--5711},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{kommissarchik2000better,
+  title={Better Accent Tutor--Analysis and visualization of speech prosody},
+  author={Kommissarchik, J and Komissarchik, Edward},
+  journal={Proceedings of Internation Speech Technology In Language Learning 2000},
+  pages={86--89},
+  year={2000}
+}
+
+
+@misc{python,
+	Author = {{Python Software Foundation}},
+	Howpublished = {Computer program (Version 2.7)},
+	Title = {Python Language Reference},
+	Url = {http://www.python.org/},
+	Year = {2014}}
